--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1",
+        "php": ">=7.0.0",
         "bugsnag/bugsnag-laravel": "^2.4",
         "doctrine/dbal": "^2.5",
-        "laravel/framework": "5.4.*",
+        "laravel/framework": ">=5.5",
         "laravel/socialite": "^3.0",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "5.4.*",
+        "laravel/tinker": "~1.0",
+        
         "lasserafn/php-initial-avatar-generator": "^2.0",
         "league/commonmark": "^0.15.2",
         "roave/security-advisories": "dev-master",
@@ -24,11 +24,12 @@
         "jakub-onderka/php-parallel-lint": "^0.9.2",
         "laravel/browser-kit-testing": "^1.0",
         "laravel/homestead": "^5",
-        "mockery/mockery": "^0.9.5",
+        "mockery/mockery": "0.9.*",
         "phpspec/phpspec": "^3.2",
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "~6.0",
         "symfony/css-selector": "^3.1",
-        "symfony/dom-crawler": "^3.1"
+        "symfony/dom-crawler": "^3.1",
+		 "filp/whoops": "~2.0"
     },
     "autoload": {
         "classmap": [
@@ -48,18 +49,14 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "php artisan key:generate"
+            "@php artisan key:generate"
         ],
-        "post-install-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
-        ],
-        "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
-            "php artisan optimize"
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover"
         ],
         "start": [
             "composer install",
